--- a/sqhgxsq.com/next/Hub/Hub.html
+++ b/sqhgxsq.com/next/Hub/Hub.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>【商丘回高】一个数字化高中</title>
     <link rel="stylesheet" href="../sqhgxsq_1.css">
+    <link rel="stylesheet" href="../loading.css">
 </head>
 <body>
+    <!-- Alert the viewer that the page is loading -->
+    <div class="loading">
+        <!-- Please don't forget link css -->
+        <h1>Loading...</h1>
+    </div>
+    <!--  -->
     <div class="sqhgxsq_1_bgi_1">
         <!-- This is a background shadow -->
         <div class="sqhgxsq_1_bgi_1_shadow"></div>
