--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <link rel="apple-touch-icon" href="./sqhgxsq.com/next/Material/logo.png">
+    <link rel="icon" href="./sqhgxsq.com/next/Material/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./sqhgxsq.com/next/Material/logo.ico" type="image/x-icon">
+    <meta name="renderer" content="webkit">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="format-detection" content="telephone=no,email=no,adress=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="keywords" content="商丘回高">
+    <meta name="description" content="商丘回高，商丘市回民中学，回民中学，商丘回高学生区">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>欢迎登录</title>
     <link rel="stylesheet" href="./Sign.css">
