--- a/sqhgxsq.com/next/Hub/Hub.html
+++ b/sqhgxsq.com/next/Hub/Hub.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no,email=no,adress=no">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords" content="商丘回高">
     <meta name="description" content="商丘回高，商丘市回民中学，回民中学，商丘回高学生区">
 
@@ -28,6 +28,24 @@
     <div class="sqhgxsq_1_bgi_1">
         <!-- This is a background shadow -->
         <div class="sqhgxsq_1_bgi_1_shadow"></div>
+
+        <!-- This is a lighting color -->
+        <div class="sqhgxsq_1_bgi_1_light_1">
+            <div class="sqhgxsq_1_bgi_1_light_1_1"></div>
+            <div class="sqhgxsq_1_bgi_1_light_1_2"></div>
+            <div class="sqhgxsq_1_bgi_1_light_1_3"></div>
+            <div class="sqhgxsq_1_bgi_1_light_1_4"></div>
+            <div class="sqhgxsq_1_bgi_1_light_1_5"></div>
+            <div class="sqhgxsq_1_bgi_1_light_1_6"></div>
+            <div class="sqhgxsq_1_bgi_1_light_1_7"></div>
+            <div class="sqhgxsq_1_bgi_1_light_1_8"></div>
+            <div class="sqhgxsq_1_bgi_1_light_1_9"></div>
+            <div class="sqhgxsq_1_bgi_1_light_1_10"></div>
+            <div class="sqhgxsq_1_bgi_1_light_1_11"></div>
+            <div class="sqhgxsq_1_bgi_1_light_1_12"></div>
+            <div class="sqhgxsq_1_bgi_1_light_1_13"></div>
+        </div>
+
         <!-- up -->
         <div class="sqhgxsq_1_bgi_1_1">
             <div>
@@ -47,6 +65,7 @@
             </div>
         </div>
         <!-- down -->
+
     </div>
 </body>
 </html>
