--- a/sqhgxsq.com/next/Hub/Hub.html
+++ b/sqhgxsq.com/next/Hub/Hub.html
@@ -16,7 +16,21 @@
 
     <title>【商丘回高】一个数字化高中</title>
     <link rel="stylesheet" href="../sqhgxsq_1.css">
+    <link rel="stylesheet" href="../sqhgxsq_2.css">
     <link rel="stylesheet" href="../loading.css">
+    <!-- music -->
+    <link rel="stylesheet" href="../sqhgxsq_2.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Signika+Negative:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- music -->
 </head>
 <body>
     <!-- Alert the viewer that the page is loading -->
@@ -67,5 +81,74 @@
         <!-- down -->
 
     </div>
+    <!-- music -->
+    <div class="music">
+        <div class="filter"></div>
+        <div class="container">
+            <div class="player">
+              <div class="player-top">
+                <button class="player-btn" type="button">
+                  <i class="fa-solid fa-arrow-left"></i>
+                </button>
+                <span>每期精选交响乐</span>
+                <button class="player-btn" type="button">
+                  <i class="fa-solid fa-ellipsis"></i>
+                </button>
+              </div>
+              <div class="player-body">
+                <div class="current-song">
+                  <div class="cover">
+                    <span></span>
+                    <span></span>
+                  </div>
+                </div>
+              </div>
+              <div class="song-info">
+                <div class="song-details">
+                  <span class="song-name">Natlan</span>
+                  <span class="song-artist">HOYO-MiX</span>
+                </div>
+                <i class="fa-solid fa-heart"></i>
+              </div>
+              <div class="song-duration">
+                <div class="song-time">
+                  <div class="song-progress">
+                    <!-- <audio src="https://static-mp-54c94446-e6a2-431f-84c4-ed0d181ae263.next.bspapp.com/Material/Natlan.mp3" class="audio"></audio> -->
+                    <!-- 改成链接就不能调时间了 -->
+                    <audio src="../Material/Natlan.mp3" class="audio"></audio>
+                  </div>
+                </div>
+                <div class="time">
+                  <span>0:00</span>
+                  <span>0:00</span>
+                </div>
+              </div>
+              <div class="controls">
+                <button class="player-btn" type="button">
+                  <i class="fa-solid fa-shuffle"></i>
+                </button>
+                <button class="player-btn prev-btn" type="button">
+                  <i class="fa-solid fa-backward"></i>
+                </button>
+                <button class="player-btn play-pause" type="button">
+                  <i class="fa-solid fa-play"></i>
+                </button>
+                <button class="player-btn next-btn" type="button">
+                  <i class="fa-solid fa-forward"></i>
+                </button>
+                <button class="player-btn" type="button">
+                  <i class="fa-solid fa-repeat"></i>
+                </button>
+              </div>
+              <div class="player-footer">
+                <i class="fa-sharp fa-solid fa-music"></i>
+                <span>Sikiliza Muziki wa Wingu wa NetEase</span>
+                <i class="fa-sharp fa-solid fa-list"></i>
+              </div>
+            </div>
+          </div>
+    </div>
+    <!-- music -->
+    <script src="../sqhgxsq_2.js"></script>
 </body>
 </html>
