--- a/index.html
+++ b/index.html
@@ -27,24 +27,27 @@
     </div>
     <!--  -->
     <!-- Sign in -->
-    <div class="box">
-        <h2>Login</h2>
-        <div class="input-box">
-            <label>账号</label>
-            <input type="text"/>
-        </div>
-        <div class="input-box">
-            <label>密码</label>
-            <input type="password"/>
-        </div>
-        <div class="btn-box">
-            <a href="#">忘记密码?</a>
-            <div>
-                <button onclick='window.open("./sqhgxsq.com/next/Hub/Hub.html")'>登录</button>
-                <button onclick='window.open("./sqhgxsq.com/next/Hub/Hub.html")'>注册</button>
+    <div class="bgi">
+        <div class="box">
+            <h2>Login</h2>
+            <div class="input-box">
+                <label>账号</label>
+                <input type="text"/>
+            </div>
+            <div class="input-box">
+                <label>密码</label>
+                <input type="password"/>
+            </div>
+            <div class="btn-box">
+                <a href="#">忘记密码?</a>
+                <div>
+                    <button onclick='window.open("./sqhgxsq.com/next/Hub/Hub.html")'>登录</button>
+                    <button onclick='window.open("./sqhgxsq.com/next/Hub/Hub.html")'>注册</button>
+                </div>
             </div>
         </div>
     </div>
     <!--  -->
+    
 </body>
 </html>
