--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="format-detection" content="telephone=no,email=no,adress=no">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="keywords" content="商丘回高">
-    <meta name="description" content="商丘回高，商丘市回民中学，回民中学，商丘回高学生区">
+    <meta name="description" content="商丘回高,商丘市回民中学,回民中学,商丘回高学生区">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>欢迎登录</title>
