--- a/sqhgxsq.com/next/Hub/Hub.html
+++ b/sqhgxsq.com/next/Hub/Hub.html
@@ -12,7 +12,7 @@
     <meta name="format-detection" content="telephone=no,email=no,adress=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords" content="商丘回高">
-    <meta name="description" content="商丘回高，商丘市回民中学，回民中学，商丘回高学生区">
+    <meta name="description" content="商丘回高,商丘市回民中学,回民中学,商丘回高学生区">
 
     <title>【商丘回高】一个数字化高中</title>
     <link rel="stylesheet" href="../sqhgxsq_1.css">
