--- a/sqhgxsq.com/next/Hub/Hub.html
+++ b/sqhgxsq.com/next/Hub/Hub.html
@@ -11,8 +11,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no,email=no,adress=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="keywords" content="商丘回高">
-    <meta name="description" content="商丘回高,商丘市回民中学,回民中学,商丘回高学生区">
+    <meta name="keywords" content="商丘回高,商丘市回民中学,回民中学,商丘回高学生区,回高,商丘市回民中学,回民高中,商丘市回高,回民高级中学,河南回高,回中,商丘市回民高中">
+    <meta name="description" content="河南省商丘市回高学生区，专属于学生的回高官网！这里有及时的新闻，海量回高最新消息，内容来自回高官网的直接搬运，与商丘回高官网信息实现同步共享！你想了解的都在这里，美丽回高欢迎您！">
 
     <title>【商丘回高】一个数字化高中</title>
     <link rel="stylesheet" href="../sqhgxsq_1.css">
