--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="apple-touch-icon" href="./sqhgxsq.com/next/Material/logo.png">
-    <link rel="icon" href="./sqhgxsq.com/next/Material/logo.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="./sqhgxsq.com/next/Material/logo.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="./sqhgxsq/next/Material/logo.png">
+    <link rel="icon" href="./sqhgxsq/next/Material/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./sqhgxsq/next/Material/logo.ico" type="image/x-icon">
     <meta name="renderer" content="webkit">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>欢迎登录</title>
     <link rel="stylesheet" href="./Sign.css">
-    <link rel="stylesheet" href="./sqhgxsq.com/next/loading.css">
+    <link rel="stylesheet" href="./sqhgxsq/next/loading.css">
 </head>
 <body>
     <!-- Alert the viewer that the page is loading -->
@@ -41,8 +41,8 @@
             <div class="btn-box">
                 <a href="#">忘记密码?</a>
                 <div>
-                    <button onclick='window.open("./sqhgxsq.com/next/Hub/Hub.html")'>登录</button>
-                    <button onclick='window.open("./sqhgxsq.com/next/Hub/Hub.html")'>注册</button>
+                    <button onclick='window.open("./sqhgxsq/next/Hub/Hub.html")'>登录</button>
+                    <button onclick='window.open("./sqhgxsq/next/Hub/Hub.html")'>注册</button>
                 </div>
             </div>
         </div>
