--- a/sqhgxsq/next/Hub/Hub.html
+++ b/sqhgxsq/next/Hub/Hub.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="apple-touch-icon" href="../../../sqhgxsq.com/next/Material/logo.png">
-    <link rel="icon" href="../../../sqhgxsq.com/next/Material/logo.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../../../sqhgxsq.com/next/Material/logo.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="../../../sqhgxsq/next/Material/logo.png">
+    <link rel="icon" href="../../../sqhgxsq/next/Material/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../../sqhgxsq/next/Material/logo.ico" type="image/x-icon">
     <meta name="renderer" content="webkit">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
