--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <div class="headertitle">商丘市回民中学</div>
         </div>
         <div class="he2">
-            <div style="margin: 0 10px;">简介</div>
-            <div style="margin: 0 10px;">交易</div>
-            <div style="margin: 0 10px;">新闻</div>
-            <div style="margin: 0 10px;">站长</div>
+            <div style="margin: 0 10px;"><a href="#">简介</a></div>
+            <div style="margin: 0 10px;"><a href="#">交易</a></div>
+            <div style="margin: 0 10px;"><a href="#">新闻</a></div>
+            <div style="margin: 0 10px;"><a href="#">站长</a></div>
         </div>
     </header>
 
