--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <title>商丘市回民中学 -欢迎登录</title>
     <link rel="stylesheet" href="./header.css">
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./p1.css">
+    <link rel="stylesheet" href="./p2.css">
     <link rel="stylesheet" href="./footer.css">
 </head>
 <body>
-
 
     <header>
         <div class="he1">
@@ -29,12 +30,100 @@
             <div class="headertitle">商丘市回民中学</div>
         </div>
         <div class="he2">
-            <div style="margin: 0 10px;"><a href="#">简介</a></div>
-            <div style="margin: 0 10px;"><a href="#">交易</a></div>
-            <div style="margin: 0 10px;"><a href="#">新闻</a></div>
-            <div style="margin: 0 10px;"><a href="#">站长</a></div>
+            <div><a href="#">简介</a></div>
+            <div><a href="#">交易</a></div>
+            <div><a href="#">新闻</a></div>
+            <div><a href="#">站长</a></div>
         </div>
     </header>
+
+
+
+
+
+
+
+
+    <div class="p1">
+
+        <div class="p1-p1">
+            <div class="p1-p1-p1">实现大学愿景</div>
+            <div class="p1-p1-p2">为学生们提供网络<a href="#" id="scrollLink"><svg viewBox="0 0 24 24" class="Usvg"><path d="M16.4 6a2 2 0 100-4 2 2 0 000 4zM12 18h9v-6.484a3 3 0 00-3-3h-3a3 3 0 00-3 3H6a3 3 0 00-3 3V21h9v-3zM10 7a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>服务</a></div>
+            
+        </div>
+
+    </div>
+
+
+
+
+
+
+
+
+    <div class="p2" id="targetElement">
+        <div class="p2-p2">
+            <div class="p2-p2-p1">
+                <div class="p2-p2-p1-p1">面向{学生}</div>
+                <div class="p2-p2-p1-p2">轻松获取服务</div>
+            </div>
+            <div class="p2-p2-p2">
+                <div class="p2-p2-p2-p1">提供给学生体验丰富的功能</div>
+                <div class="p2-p2-p2-p2">
+
+                    <div class="card1">
+                        <div class="g1"></div>
+                        <div class="g2">
+                            <div class="c1">二手交易市场</div>
+                            <div class="c2">各种二手货，十分廉价!</div>
+                        </div>
+                    </div>
+
+                    <div class="card1">
+                        <div class="g1"></div>
+                        <div class="g2">
+                            <div class="c1">二手交易市场</div>
+                            <div class="c2">各种二手货，十分廉价!</div>
+                        </div>
+                    </div>
+                    
+                    <div class="card1">
+                        <div class="g1"></div>
+                        <div class="g2">
+                            <div class="c1">二手交易市场</div>
+                            <div class="c2">各种二手货，十分廉价!</div>
+                        </div>
+                    </div>
+
+                    <div class="card1">
+                        <div class="g1"></div>
+                        <div class="g2">
+                            <div class="c1">二手交易市场</div>
+                            <div class="c2">各种二手货，十分廉价!</div>
+                        </div>
+                    </div>
+
+                    <div class="card1">
+                        <div class="g1"></div>
+                        <div class="g2">
+                            <div class="c1">二手交易市场</div>
+                            <div class="c2">各种二手货，十分廉价!</div>
+                        </div>
+                    </div>
+
+                    <div class="card1">
+                        <div class="g1"></div>
+                        <div class="g2">
+                            <div class="c1">二手交易市场</div>
+                            <div class="c2">各种二手货，十分廉价!</div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 
@@ -86,7 +175,6 @@
         <div id="Copyright">Copyright @2005-2022 商丘市回民中学&nbsp;<a href="https://beian.miit.gov.cn/#/Integrated/index" target="_blank">豫ICP备2023036038号</a></div>
     </footer>
 
-
-
 </body>
+<script src="./ToTargetscroll.js"></script>
 </html>
