--- a/demo.html
+++ b/demo.html
@@ -3,72 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Smooth Scroll</title>
+    <title>demo</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        *{
+            margin: 0;
+            padding: 0;
         }
-        #content {
-            height: 1500px; /* 为了演示滚动效果，增加了一些内容高度 */
+        body{
+            overflow-x: hidden;
         }
-        #targetElement {
-            margin-top: 1000px; /* 目标元素更加偏下一些 */
-            background-color: yellow;
-            padding: 20px;
-            border: 1px solid black;
+        .t1{
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;
         }
-        a {
-            position: fixed; /* 链接固定在页面顶部 */
-            top: 10px;
-            left: 10px;
+        .t2{
+            position: absolute;
+            width: 100vw;
+            height: 100vh;
+            background-color: rgba(0,0,0,0.6);
+            z-index: 1;
+
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            font-size: 36px;
+            font-weight: 600;
+            color: white;
         }
     </style>
 </head>
 <body>
-
-<a href="#" id="scrollLink">Go to Target Element</a>
-
-<div id="content">
-    <p>Scroll down to see the target element, or click the link above to scroll smoothly to it.</p>
-</div>
-
-<div id="targetElement">
-    This is the target element.
-</div>
-
-<script>
-    document.getElementById('scrollLink').addEventListener('click', function(event) {
-        event.preventDefault(); // 阻止链接的默认行为
-        smoothScrollToElement('targetElement');
-    });
-
-    function smoothScrollToElement(elementId) {
-        var targetElement = document.getElementById(elementId);
-        var targetPosition = targetElement.getBoundingClientRect().top + window.pageYOffset - document.documentElement.clientTop; // 计算目标位置
-        var startPosition = window.pageYOffset; // 当前滚动位置
-        var distance = targetPosition - startPosition; // 需要滚动的距离
-        var duration = 1000; // 滚动动画的持续时间（毫秒）
-        var startTime = null;
-
-        function animation(currentTime) {
-            if (startTime === null) startTime = currentTime;
-            var timeElapsed = currentTime - startTime;
-            var run = ease(timeElapsed, startPosition, distance, duration);
-            window.scrollTo(0, run);
-            if (timeElapsed < duration) requestAnimationFrame(animation);
-        }
-
-        function ease(t, b, c, d) {
-            // 使用缓动函数（这里使用的是线性缓动，但你可以根据需要替换为其他缓动函数）
-            t /= d / 2;
-            if (t < 1) return c / 2 * t * t + b;
-            t--;
-            return -c / 2 * (t * (t - 2) - 1) + b;
-        }
-
-        requestAnimationFrame(animation);
-    }
-</script>
-
+    <div class="t1">
+        <video src="https://act-webstatic.mihoyo.com/puzzle/hk4e/pz_BtkeHCxQ3a/resource/puzzle/2024/11/08/fd7f03b160a6e938999989119f7aa95a_8766062612396520469.mp4" loop="loop" autoplay="autoplay" muted></video>
+        <div class="t2">
+            <div>欢迎来到纳塔</div>
+        </div>
+    </div>
+    <div class="t1">
+    </div>
 </body>
 </html>
