--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./p1.css">
     <link rel="stylesheet" href="./p2.css">
+    <link rel="stylesheet" href="./p3.css">
+    <link rel="stylesheet" href="./p4.css">
+    <link rel="stylesheet" href="./p5.css">
     <link rel="stylesheet" href="./footer.css">
 </head>
 <body>
@@ -48,7 +51,7 @@
 
         <div class="p1-p1">
             <div class="p1-p1-p1">实现大学愿景</div>
-            <div class="p1-p1-p2">为学生们提供网络<a href="#" id="scrollLink"><svg viewBox="0 0 24 24" class="Usvg"><path d="M16.4 6a2 2 0 100-4 2 2 0 000 4zM12 18h9v-6.484a3 3 0 00-3-3h-3a3 3 0 00-3 3H6a3 3 0 00-3 3V21h9v-3zM10 7a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>服务</a></div>
+            <div class="p1-p1-p2">为<a href="#" id="scrollLink">{学生}</a>、<a href="#" id="scrollLink1"><svg viewBox="0 0 24 24" class="Usvg"><path d="M16.4 6a2 2 0 100-4 2 2 0 000 4zM12 18h9v-6.484a3 3 0 00-3-3h-3a3 3 0 00-3 3H6a3 3 0 00-3 3V21h9v-3zM10 7a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>教师</a>和<a href="#" id="scrollLink2"><svg viewBox="0 0 24 24" class="Usvg2"><path d="M14 11V4H4.004v8H4v9h16.004l.1-10H14zm-6 5H6v-2h2v2zm.004-4h-2v-2h2v2zm0-4h-2V6h2v2zM12 16h-2v-2h2v2zm.004-4h-2v-2h2v2zm0-4h-2V6h2v2z"></path></svg>企业</a>提供网络服务</div>
             
         </div>
 
@@ -123,6 +126,117 @@
             </div>
         </div>
     </div>
+
+
+
+
+
+
+
+
+    <div class="p3">
+        <div class="p3-p1">
+            <video class="p3-p1-p1" src="https://act-webstatic.mihoyo.com/puzzle/hk4e/pz_BtkeHCxQ3a/resource/puzzle/2024/11/08/fd7f03b160a6e938999989119f7aa95a_8766062612396520469.mp4" loop="loop" autoplay="autoplay" muted></video>
+            <div class="p3-p1-p2">
+                <div class="p3-p1-p2-p1">每年一本录取率超<div>30%</div></div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="p4" id="targetElement1">
+        <div class="p4-p2">
+            <div class="p4-p2-p1">
+                <div class="p4-p2-p1-p1">面向<svg viewBox="0 0 24 24" class="Usvg"><path d="M16.4 6a2 2 0 100-4 2 2 0 000 4zM12 18h9v-6.484a3 3 0 00-3-3h-3a3 3 0 00-3 3H6a3 3 0 00-3 3V21h9v-3zM10 7a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>教师</div>
+                <div class="p4-p2-p1-p2">最大限度减少摩擦并提高工作效率</div>
+            </div>
+            <div class="p4-p2-p2">
+                <div class="p4-p2-p2-p1">通过快速的工作流确保高效协作并维护高质量教学</div>
+                <div class="p4-p2-p2-p2">
+
+                    <div class="card2">
+                        <div class="g1"></div>
+                        <div class="g2">
+                            <div class="c1">二手交易市场</div>
+                            <div class="c2">各种二手货，十分廉价!</div>
+                        </div>
+                    </div>
+
+                    <div class="card2">
+                        <div class="g1"></div>
+                        <div class="g2">
+                            <div class="c1">二手交易市场</div>
+                            <div class="c2">各种二手货，十分廉价!</div>
+                        </div>
+                    </div>
+                    
+                    <div class="card2">
+                        <div class="g1"></div>
+                        <div class="g2">
+                            <div class="c1">二手交易市场</div>
+                            <div class="c2">各种二手货，十分廉价!</div>
+                        </div>
+                    </div>
+
+                    <div class="card2">
+                        <div class="g1"></div>
+                        <div class="g2">
+                            <div class="c1">二手交易市场</div>
+                            <div class="c2">各种二手货，十分廉价!</div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="p5" id="targetElement2">
+        <div class="p5-p2">
+            <div class="p5-p2-p1">
+                <div class="p5-p2-p1-p1">面向<svg viewBox="0 0 24 24" class="Usvg2"><path d="M14 11V4H4.004v8H4v9h16.004l.1-10H14zm-6 5H6v-2h2v2zm.004-4h-2v-2h2v2zm0-4h-2V6h2v2zM12 16h-2v-2h2v2zm.004-4h-2v-2h2v2zm0-4h-2V6h2v2z"></path></svg>企业</div>
+                <div class="p5-p2-p1-p2">助力团队成长，取得企业成功</div>
+            </div>
+            <div class="p5-p2-p2">
+                <div class="p5-p2-p2-p1">商丘回高 WEB Services</div>
+                <div class="p5-p2-p2-p2">大规模管理教学方案</div>
+                <div class="p5-p2-p2-p3">通过集中方式大规模管理教师和学生，将其配置到整个组织的
+                    计算机上。</div>
+                <div class="b1">了解详情</div>
+            </div>
+        </div>
+    </div>
+
 
 
 
