--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     <div class="p3">
         <div class="p3-p1">
-            <video class="p3-p1-p1" src="https://act-webstatic.mihoyo.com/puzzle/hk4e/pz_BtkeHCxQ3a/resource/puzzle/2024/11/08/fd7f03b160a6e938999989119f7aa95a_8766062612396520469.mp4" loop="loop" autoplay="autoplay" muted></video>
+            <video class="p3-p1-p1" src="https://act-webstatic.mihoyo.com/puzzle/hk4e/pz_BtkeHCxQ3a/resource/puzzle/2024/11/08/fd7f03b160a6e938999989119f7aa95a_8766062612396520469.mp4" loop="loop" autoplay="autoplay" muted controls="none"></video>
             <div class="p3-p1-p2">
                 <div class="p3-p1-p2-p1">每年一本录取率超<div>30%</div></div>
             </div>
