--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <meta name="keywords" content="商丘回高,商丘市回民中学,回民中学,商丘回高学生区,回高,商丘市回民中学,回民高中,商丘市回高,回民高级中学,河南回高,回中,商丘市回民高中">
     <meta name="description" content="河南省商丘市回高学生区，专属于学生的回高官网！这里有及时的新闻，海量回高最新消息，内容来自回高官网的直接搬运，与商丘回高官网信息实现同步共享！你想了解的都在这里，美丽回高欢迎您！">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+    
     <title>商丘市回民中学 -欢迎登录</title>
     <link rel="stylesheet" href="./header.css">
     <link rel="stylesheet" href="./index.css">
@@ -136,7 +139,7 @@
 
     <div class="p3">
         <div class="p3-p1">
-            <video class="p3-p1-p1" id="video" loop="loop" autoplay="autoplay" muted x5-playsinline="" playsinline="true" webkit-playsinline="false" x-webkit-airplay="true" x5-video-player-type="h5" x5-video-player-fullscreen="" x5-video-orientation="portraint">
+            <video class="p3-p1-p1" id="video" loop="loop" autoplay="autoplay" muted>
                 <source src="https://act-webstatic.mihoyo.com/puzzle/hk4e/pz_BtkeHCxQ3a/resource/puzzle/2024/11/08/fd7f03b160a6e938999989119f7aa95a_8766062612396520469.mp4" type="video/mp4" >
             </video>
             <canvas id="canvas" width="1920" height="1080" style="background-color: black;"></canvas>
