--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
     <div class="p3">
         <div class="p3-p1">
-            <video class="p3-p1-p1" id="video" loop="loop" autoplay="autoplay" muted>
+            <video class="p3-p1-p1" id="video" autoplay loop muted preload="auto" playsinline data-autoplay="true">
                 <source src="https://act-webstatic.mihoyo.com/puzzle/hk4e/pz_BtkeHCxQ3a/resource/puzzle/2024/11/08/fd7f03b160a6e938999989119f7aa95a_8766062612396520469.mp4" type="video/mp4" >
             </video>
             <canvas id="canvas" width="1920" height="1080" style="background-color: black;"></canvas>
