--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <div class="headertitle">商丘市回民中学</div>
         </div>
         <div class="he2">
-            <div><a href="#">简介</a></div>
-            <div><a href="#">交易</a></div>
-            <div><a href="#">新闻</a></div>
-            <div><a href="#">站长</a></div>
+            <div><a href="#">主页</a></div>
+            <div><a href="./shop/shop.html">交易</a></div>
+            <!-- <div><a href="#">新闻</a></div>
+            <div><a href="#">站长</a></div> -->
         </div>
     </header>
 
@@ -77,7 +77,7 @@
                 <div class="p2-p2-p2-p1">提供给学生体验丰富的功能</div>
                 <div class="p2-p2-p2-p2">
 
-                    <div class="card1">
+                    <div class="card1-nth1" onclick="window.open('./shop/shop.html')">
                         <div class="g1"></div>
                         <div class="g2">
                             <div class="c1">二手交易市场</div>
@@ -85,15 +85,15 @@
                         </div>
                     </div>
 
-                    <div class="card1">
+                    <div class="card1-nth2">
                         <div class="g1"></div>
                         <div class="g2">
-                            <div class="c1">二手交易市场</div>
-                            <div class="c2">各种二手货，十分廉价!</div>
+                            <div class="c1">******</div>
+                            <div class="c2">***********</div>
                         </div>
                     </div>
                     
-                    <div class="card1">
+                    <!-- <div class="card1">
                         <div class="g1"></div>
                         <div class="g2">
                             <div class="c1">二手交易市场</div>
@@ -123,7 +123,7 @@
                             <div class="c1">二手交易市场</div>
                             <div class="c2">各种二手货，十分廉价!</div>
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
@@ -175,7 +175,7 @@
                 <div class="p4-p2-p2-p1">通过快速的工作流确保高效协作并维护高质量教学</div>
                 <div class="p4-p2-p2-p2">
 
-                    <div class="card2">
+                    <!-- <div class="card2">
                         <div class="g1"></div>
                         <div class="g2">
                             <div class="c1">二手交易市场</div>
@@ -205,7 +205,7 @@
                             <div class="c1">二手交易市场</div>
                             <div class="c2">各种二手货，十分廉价!</div>
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
