--- a/shop/object/gzsxjtw.html
+++ b/shop/object/gzsxjtw.html
@@ -18,28 +18,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     
-    <title>商丘市回民中学 -二手交易网 -信息学奥赛一本通·训练指导</title>
-    <link rel="stylesheet" href="../header.css">
-    <link rel="stylesheet" href="../index.css">
+    <title>商丘市回民中学 -二手交易网 -高中数学解题王</title>
+    <link rel="stylesheet" href="../../header.css">
+    <link rel="stylesheet" href="../../index.css">
 
     <link rel="stylesheet" href="./p1.css">
-    <link rel="stylesheet" href="./p2.css">
 
-
-    <link rel="stylesheet" href="../footer.css">
+    <link rel="stylesheet" href="../../footer.css">
 </head>
-<body>
+<body style="background-color: white;">
 
     <header>
-        <div class="he1">
+        <!-- <div class="he1">
             <div class="icon"></div>
             <div class="headertitle">商丘市回民中学</div>
-        </div>
-        <div class="he2">
-            <div><a href="../index.html">主页</a></div>
-            <div><a href="#">交易</a></div>
+        </div> -->
+        <div class="he2" style="margin: 10px;">
+            <div><a href="../../index.html">主页</a></div>
+            <div><a href="../shop.html">交易</a></div>
         </div>
     </header>
+
+
+
+
+
+
+
+
+
+    <div class="p1">
+        <div class="h-bar"></div>
+        <div class="p1-p1">
+            <img class="pic" src="https://upload-bbs.miyoushe.com/upload/2024/11/16/198629752/d50587f1cc4bd3fa902a026a95182c22_810065608418882107.jpg" alt="商品">
+            <div class="content1">
+                <div class="ti">高中数学解题王</div>
+                <div style="color: red;">￥100.00</div>
+                <div style="color: gray;">卖家花了至少300.00买入</div>
+                <br><hr><br>
+                <div><b>卖家留言：</b></div>
+                <div>
+                    这本书是我2023年买的，但是我妈不知道从哪看的，花了300多买下来的，现在看来不值300多，亏死了，我现在100卖出，谁想要谁要吧。这里面还附赠了一个样题讲解卡，也不能用，估计是人家公司倒了，讲解网站没了。
+                </div>
+                <!-- <hr> -->
+                <br>
+                <div><b>卖家联系方式：</b></div>
+                <ul>
+                    <li>QQ：2303058330</li>
+                </ul>
+                <br>
+                <div><b>送货时长：</b>6天内</div>
+                <div><b>运费：</b>包运费</div>
+                <div><b>退货：</b>7天无理由退货</div>
+                <br>
+                <div style="background-color: #FFF5F2;border-left: 5px solid #E74C3C;padding: 5px;">
+                    <b>管理组提示：</b>
+                    <p>这里的退货是在卖家出货后的7天内无理由退货。特别的，如果买家在收到商品后，因买家的不当行为造成了破损、严重褶皱、明显污渍等现象不予退货。</p>
+                </div>
+                <br>
+            </div>
+        </div>
+    </div>
 
 
 
