--- a/shop/object/xxxasybt_gd.html
+++ b/shop/object/xxxasybt_gd.html
@@ -72,7 +72,7 @@
                 <div><b>运费：</b>包运费</div>
                 <div><b>退货：7天无理由退货</b></div>
                 <br>
-                <div style="background-color: #FFF5F2;border-left: 5px solid #E74C3C;padding: 5px;">
+                <div style="background-color: #FFF5F2;border-left: 5px solid #E74C3C;padding: 5px;padding: 20px;line-height: 1.5rem;">
                     <b>管理组提示：</b>
                     <p>这里的退货是在卖家出货后的7天内无理由退货。特别的，如果买家在收到商品后，因买家的不当行为造成了破损、严重褶皱、明显污渍等现象不予退货。</p>
                 </div>
